--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "Solving part-4 exercises for fullstackopen course",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "node --test"
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development nodemon index.js",
+    "test": "NODE_ENV=test node --test",
+    "test-only": "NODE_ENV=test node --test --test-only"
   },
   "author": "Vlad-Rares Raducu",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "supertest": "^7.0.0"
   },
   "dependencies": {
     "cors": "^2.8.5",
